# academus-docs

./: .editorconfig  .gitignore  404.html  check_env.sh  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
core/: urls.py
core/settings/: base.py  prod.py
docs/: guia_completo_mkdocs_poetry.md
scripts/: backup_full.sh  runserver.sh
site/: index.html
