[project]
name = "academus"
version = "0.1.0"
description = "Ecossistema editorial e de gestão integrado — Academus."
authors = [
    { name = "Soeirotech", email = "contato@devillint.com.br" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django",
    "python-decouple",
    "psycopg2-binary",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


#TODO 
# 💡 Explicação rápida
# name → nome do pacote (deve ser simples e sem espaços).
# version → versão semântica (mantém o padrão 0.1.0 pra início).
# dependencies → lista inicial das libs essenciais (você pode adicionar depois via poetry add).
# authors → opcional, mas útil pra metadados e documentação.